# toothgame

./: Cargo.toml  README.md  build-debug.sh  build.rs  build.sh
level-editor/: Cargo.toml  level.txt
level-editor/src/: editor.rs  main.rs
src/: controller.rs  foreground.rs  framebuffer.rs  graphics.rs  lib.rs  terrain.rs  vec2.rs
src/state/: level.rs  mod.rs
testbench/: Cargo.toml
testbench/src/: main.rs
tooth-engine/: Cargo.toml  build.rs
tooth-engine/src/: background.rs  controller.rs  foreground.rs  framebuffer.rs  graphics.rs  lib.rs  rand.rs  terrain.rs  vec2.rs
tooth-engine/src/entity/: collision.rs  mod.rs  player.rs
tooth-engine/src/state/: level.rs  mod.rs
tooth-engine/src/state/level/: hud.rs  mod.rs
www/: index.html
