[package]
name = "toothgame"
version = "0.1.0"
authors = ["x10A94 <hyperpone@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tooth-engine = { path = "tooth-engine" }
